WIP komplett geswitcht auf user/game